--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <link href="../assets/css/core/demo-panel.css" rel="stylesheet">
         <link href="../assets/css/homepages/homepage-01.min.css" rel="stylesheet">
         <!-- google fonts -->
-        <link href='./fonts.googleapis.com/css6665.css?family=Montserrat:400,700%7CPT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
+        <link href='../assets/fonts/css6665.css?family=Montserrat:400,700%7CPT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <app-root>Loading...</app-root>
