Add imort of css homepage05

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
         <link href="../assets/css/core/main.min.css" rel="stylesheet">
         <link href="../assets/css/core/demo-panel.css" rel="stylesheet">
         <link href="../assets/css/homepages/homepage-01.min.css" rel="stylesheet">
+        <link href="../assets/css/homepages/homepage-05.min.css" rel="stylesheet">
         <!-- google fonts -->
         <link href='../assets/fonts/css6665.css?family=Montserrat:400,700%7CPT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
 </head>
