Bug fix for most of the animations

--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,38 @@
         <link href="../assets/css/core/main.min.css" rel="stylesheet">
         <link href="../assets/css/core/demo-panel.css" rel="stylesheet">
         <link href="../assets/css/homepages/homepage-01.min.css" rel="stylesheet">
+        <link href="../assets/css/homepages/homepage-03.min.css" rel="stylesheet">
         <link href="../assets/css/homepages/homepage-05.min.css" rel="stylesheet">
         <!-- google fonts -->
         <link href='../assets/fonts/css6665.css?family=Montserrat:400,700%7CPT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
+
+
+        <script src="../assets/js/core/jquery-3.1.1.min.js"></script>
+        <script src="../assets/js/core/bootstrap.min.js"></script>
+        <script src="../assets/js/core/jquery.easing.min.js"></script>
+        <script src="../assets/js/plugins/waypoints/jquery.waypoints.min.js"></script>
+        <script src="../assets/js/plugins/counter/jquery.counterup.min.js"></script>
+        <script src="../assets/js/plugins/typed/typed.min.js"></script>
+        <script src="../assets/js/plugins/owl-carousel/owl.carousel.min.js"></script>
+        <script type="text/javascript">
+            $(function(){
+                $('.slide-out-div').tabSlideOut({
+                    tabHandle: '.handle',                   
+                    tabLocation: 'right',                 
+                    speed: 500,                           
+                    action: 'click',               
+                    topPos: '0',  
+                    onLoadSlideOut: true,                                    
+                    fixedPosition: true                    
+                });
+            });
+        </script>
+        <script src="../assets/js/core/main.js"></script>
+        <script src="../assets/js/core/demo.switcher.min.js"></script>
+        <script src="../assets/js/pages/homepage-01.js"></script>
+        <script src="../assets/js/pages/homepage-01.js"></script>
+        <script src="../assets/js/pages/homepage-03.js"></script>
+        <script src="../assets/js/pages/homepage-05.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
