add button 'report an issue'

--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,12 @@
         <link href="../assets/css/core/font-awesome.min.css" rel="stylesheet">
         <link href="../assets/css/plugins/owl.carousel.min.css" rel="stylesheet">
         <link href="../assets/css/plugins/owl.theme.min.css" rel="stylesheet">
-        <link href="../assets/css/core/main.min.css" rel="stylesheet">
+        <link href="../assets/css/core/main.css" rel="stylesheet">
         <link href="../assets/css/core/demo-panel.css" rel="stylesheet">
         <link href="../assets/css/homepages/homepage-01.min.css" rel="stylesheet">
         <link href="../assets/css/homepages/homepage-03.min.css" rel="stylesheet">
         <link href="../assets/css/homepages/homepage-05.min.css" rel="stylesheet">
+        <link href="../assets/css/homepages/homepage-02.min.css" rel="stylesheet">
         <!-- google fonts -->
         <link href='../assets/fonts/css6665.css?family=Montserrat:400,700%7CPT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
 
