fix french text

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,15 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Bienvenue - SIGL</title>
-  <base href="/">
+        <meta charset="utf-8">
+        <title>Bienvenue - SIGL</title>
+        <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-          <meta charset="utf-8">
-        <title>Skapp - APP Landing Page</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
         <meta content="IE=edge" http-equiv="X-UA-Compatible">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <meta content="Skapp is a premium app landing page responsive html template built with bootstrap" name="description">
+        <meta content="" name="description">
         <!-- favicon -->
         <link href="assets/images/favicon.ico" rel="shortcut icon">
         <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
