change favicon and add code structure for arla course

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
         <meta content="" name="description">
         <!-- favicon -->
         <link href="assets/images/favicon.ico" rel="shortcut icon">
-        <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="assets/images/favicon.ico" sizes="32x32">
+        <link rel="icon" type="image/png" href="assets/images/favicon.ico" sizes="16x16">
         <!-- styles -->
         <link href="assets/css/core/bootstrap.min.css" rel="stylesheet">
         <link href="assets/css/core/animate.min.css" rel="stylesheet">
