--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,6 @@
         <script src="assets/js/pages/homepage-05.js"></script>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+    <homepage>Loading...</homepage>
 </body>
 </html>
