[SV][FAQ][1/2] Add the answer's page

--- a/src/index.html
+++ b/src/index.html
@@ -40,13 +40,13 @@
         <script type="text/javascript">
             $(function(){
                 $('.slide-out-div').tabSlideOut({
-                    tabHandle: '.handle',                   
-                    tabLocation: 'right',                 
-                    speed: 500,                           
-                    action: 'click',               
-                    topPos: '0',  
-                    onLoadSlideOut: true,                                    
-                    fixedPosition: true                    
+                    tabHandle: '.handle',
+                    tabLocation: 'right',
+                    speed: 500,
+                    action: 'click',
+                    topPos: '0',
+                    onLoadSlideOut: true,
+                    fixedPosition: true
                 });
             });
         </script>
@@ -58,6 +58,6 @@
         <script src="assets/js/pages/homepage-05.js"></script>
 </head>
 <body>
-    <homepage>Loading...</homepage>
+    <app-root>Loading...</app-root>
 </body>
 </html>
